// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="substrate"
  />
</section>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="substrate"
  />
</section>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="substrate"
  />
</section>
`;

exports[`Storyshots Example/Button Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="substrate"
  />
</section>
`;

exports[`Storyshots PureTaskList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
   
   
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  
</section>
`;

exports[`Storyshots PureTaskList Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
   
  <div
    class="list-items"
  >
    <div
      class="wrapper-message"
    >
      <span
        class="icon-check"
      />
       
      <div
        class="title-message"
      >
        You have no tasks
      </div>
       
      <div
        class="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
   
  
</section>
`;

exports[`Storyshots PureTaskList Loading 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-items"
  >
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
     
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
     
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
     
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
     
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
       
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
   
   
  
</section>
`;

exports[`Storyshots PureTaskList With Pinned Tasks 1`] = `
<section
  class="storybook-snapshot-container"
>
   
   
  <div
    class="list-item TASK_PINNED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
  
</section>
`;

exports[`Storyshots Task Archinved 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_ARCHIVED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    />
  </div>
</section>
`;

exports[`Storyshots Task Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item Task_INBOX"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;

exports[`Storyshots Task Pinned 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="list-item TASK_PINNED"
  >
    <label
      class="checkbox"
    >
      <input
        disabled=""
        name="checked"
        type="checkbox"
      />
       
      <span
        class="checkbox-custom"
      />
    </label>
     
    <div
      class="title"
    >
      <input
        readonly=""
        type="text"
      />
    </div>
     
    <div
      class="actions"
    >
      <a
        href="/"
      >
        <span
          class="icon-star"
        />
      </a>
    </div>
  </div>
</section>
`;
